--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,26 @@
-/node_modules
+# Application
+web/app/plugins/*
+!web/app/plugins/.gitkeep
+web/app/mu-plugins/*/
+web/app/upgrade
+web/app/uploads/*
+!web/app/uploads/.gitkeep
+
+# WordPress
+web/wp
+web/.htaccess
+
+# Dotenv
 .env
-npm-debug.log
-yarn-error.log
+.env.*
+!.env.example
+
+# Composer
+/vendor
+
+# WP-CLI
+wp-cli.local.yml
+
 .idea
 .DS_Store
 web
