--- a/composer.json
+++ b/composer.json
@@ -31,29 +31,31 @@
       "type": "composer",
       "url": "https://wpackagist.org"
     },
-
     {
-      "packagist.org": false
+      "type": "vcs",
+      "url": "https://github.com/ggamel/wp-sync-db"
     }
+
 
   ],
   "require": {
     "php": ">=7.1",
-    "composer/installers": "~1.0.12",
+    "composer/installers": "^1.0.12",
 
     "vlucas/phpdotenv": "^3.0.0",
     "oscarotero/env": "^1.1.0",
 
     "johnpbloch/wordpress": "^4.8.1",
-    "oscarotero/env": "^1.0",
 
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
 
-    "ggamel/wp-sync-db": "dev-master",
-    "wp-sync-db/wp-sync-db-media-files": "dev-master",
+    "wp-sync-db/wp-sync-db-media-files": "^1.1",
 
-    "wpackagist-plugin/classic-editor": "^1.4"
+    "wpackagist-plugin/classic-editor": "^1.4",
+    "wpackagist-plugin/events-manager": "^5.9",
+    "wpackagist-plugin/wp-action-network": "^1.1",
+    "ggamel/wp-sync-db": "dev-master"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
