--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
     "wpackagist-plugin/events-manager": "^5.9",
     "wpackagist-plugin/wp-action-network": "^1.1",
     "ggamel/wp-sync-db": "dev-master",
-    "wpackagist-plugin/events-manager-wpml": "1.2"
+    "wpackagist-plugin/events-manager-wpml": "1.2",
+    "wpackagist-plugin/wordpress-seo": "^10.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
