--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,10 @@
 
     "wp-sync-db/wp-sync-db-media-files": "^1.1",
 
+    "wpackagist-plugin/open-external-links-in-a-new-window":"1.3.2",
+    "wpackagist-plugin/flickr-viewer":"1.1.8",
+    "wpackagist-plugin/display-posts-shortcode":"3.0.1",
+
     "wpackagist-plugin/classic-editor": "^1.4",
     "wpackagist-plugin/events-manager": "^5.9",
     "wpackagist-plugin/wp-action-network": "^1.1",
