--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-DB_NAME=database_name
-DB_USER=database_user
-DB_PASSWORD=database_password
+# DB_NAME=database_name
+# DB_USER=database_user
+# DB_PASSWORD=database_password
 
-# Or you can use a DSN (database source name) 
-# In this case you can leave empty variables DB_NAME, DB_USER, DB_PASSWORD, DB_HOST 
-# DATABASE_URL=mysql://database_user:database_password@database_host:database_port/database_name
+# Or you can use a DSN (database source name)
+# In this case you can leave empty variables DB_NAME, DB_USER, DB_PASSWORD, DB_HOST
+DATABASE_URL=mysql://admin:pass@db:3306/xrnl
 
 # Optional variables
 # DB_HOST=localhost
 # DB_PREFIX=wp_
 
 WP_ENV=development
-WP_HOME=http://example.com
+WP_HOME=http://localhost:8000
 WP_SITEURL=${WP_HOME}/wp
 
 # Generate your keys here: https://roots.io/salts.html
