--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
     "wpackagist-plugin/wp-action-network": "^1.1",
     "ggamel/wp-sync-db": "dev-master",
     "wpackagist-plugin/events-manager-wpml": "1.2",
-    "wpackagist-plugin/wordpress-seo": "^11.0"
+    "wpackagist-plugin/wordpress-seo": "^11.0",
+    "wpackagist-plugin/import-meetup-events": "^1.4"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
