--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,12 @@
     }
   ],
   "keywords": [
-    "bedrock", "composer", "roots", "wordpress", "wp", "wp-config"
+    "bedrock",
+    "composer",
+    "roots",
+    "wordpress",
+    "wp",
+    "wp-config"
   ],
   "support": {
     "issues": "https://github.com/roots/bedrock/issues",
@@ -35,33 +40,26 @@
       "type": "vcs",
       "url": "https://github.com/ggamel/wp-sync-db"
     }
-
-
   ],
   "require": {
     "php": ">=7.1",
     "composer/installers": "^1.0.12",
-
     "vlucas/phpdotenv": "^3.0.0",
     "oscarotero/env": "^1.1.0",
-
-    "johnpbloch/wordpress": "^4.8.1",
-
+    "johnpbloch/wordpress": "^5.2.2",
+    "johnpbloch/wordpress-core": "^5.2.2",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
-
     "wp-sync-db/wp-sync-db-media-files": "^1.1",
-
-    "wpackagist-plugin/open-external-links-in-a-new-window":"1.3.2",
-    "wpackagist-plugin/flickr-viewer":"1.1.8",
-    "wpackagist-plugin/display-posts-shortcode":"3.0.1",
-
+    "wpackagist-plugin/open-external-links-in-a-new-window": "^1.3.2",
+    "wpackagist-plugin/flickr-viewer": "1.1.8",
+    "wpackagist-plugin/display-posts-shortcode": "3.0.1",
     "wpackagist-plugin/classic-editor": "^1.4",
     "wpackagist-plugin/events-manager": "^5.9",
     "wpackagist-plugin/wp-action-network": "^1.1",
     "ggamel/wp-sync-db": "dev-master",
     "wpackagist-plugin/events-manager-wpml": "1.2",
-    "wpackagist-plugin/wordpress-seo": "^10.0"
+    "wpackagist-plugin/wordpress-seo": "^11.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
@@ -69,9 +67,15 @@
   },
   "extra": {
     "installer-paths": {
-      "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
-      "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
-      "web/app/themes/{$name}/": ["type:wordpress-theme"]
+      "web/app/mu-plugins/{$name}/": [
+        "type:wordpress-muplugin"
+      ],
+      "web/app/plugins/{$name}/": [
+        "type:wordpress-plugin"
+      ],
+      "web/app/themes/{$name}/": [
+        "type:wordpress-theme"
+      ]
     },
     "wordpress-install-dir": "web/wp"
   },
@@ -86,6 +90,5 @@
       "cd web/app/themes/xrnl; npm install",
       "cd web/app/themes/xrnl; npm run production"
     ]
-
   }
 }
