add wp-supercache plugin. closes #31

--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
     "ggamel/wp-sync-db": "dev-master",
     "wpackagist-plugin/events-manager-wpml": "1.2",
     "wpackagist-plugin/wordpress-seo": "^11.0",
-    "wpackagist-plugin/import-meetup-events": "^1.4"
+    "wpackagist-plugin/import-meetup-events": "^1.4",
+    "wpackagist-plugin/wp-super-cache": "^1.7"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
