--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ AUTH_SALT='generateme'
 SECURE_AUTH_SALT='generateme'
 LOGGED_IN_SALT='generateme'
 NONCE_SALT='generateme'
+
+ALLOW_EVENT_REQUEST_FROM_IP=127.0.0.1
